[package]
name = "rust-simple-tunnel"
version = "0.0.1"
authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
log = "~0.4.0"
env_logger = "~0.7.0"
mio        = { version = "0.6" }
tokio      = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
bytes      = { version = "0.5" }
byteorder  = { version = "1.3" }
chrono     = "0.4"
ipnetwork   = "~0.17.0"
byte-unit = "~4.0.9"
humantime = "~2.0.1"
humanize-rs = "0.1"
tun = { version = "0.5", features = ["mio", "async"] }
packet     = "0.1"
futures    = "~0.3.1"
ioctl      = { version = "0.5", package = "ioctl-sys" }